Bug 415281 - Dolphin shows full remote path in side panel for NFS shares instead of local name
Summary: Dolphin shows full remote path in side panel for NFS shares instead of local ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-solid
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.65.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-17 10:48 UTC by forum
Modified: 2020-06-16 17:37 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments
How it currently looks like (15.45 KB, image/png)
2019-12-17 10:48 UTC, forum
Details

Note You need to log in before you can comment on or make changes to this bug.
Description forum 2019-12-17 10:48:43 UTC
Created attachment 124543 [details]
How it currently looks like

SUMMARY
If one adds an NFS share in KDE Dolphin on Kubuntu 19.10, instead of the local (short) name, KDE uses the path on the remote machine. In the properties, the name is correct but this does not affect the display in side panel.

Example NFS entry for /etc/fstab
192.168.170.11:/raid/backups/linux /media/user/Backup nfs4 rw,_netdev,noauto,user 0 0
I think it does not matter if the server really exists. 

STEPS TO REPRODUCE

1. Add NFS share to /etc/fstab
2. Start Dolphin

OBSERVED RESULT
Short name (mount point) should be used or this should at least be configurable.


EXPECTED RESULT
Long remote path is used. 


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 19.10 and prior
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-12-18 13:53:37 UTC
Méven, is this the thing you already fixed recently? Sounds familiar, but I don't have any NFS shares to test with.
Comment 2 Méven Car 2019-12-19 06:37:17 UTC
I reproduce it.

It is not related to my recent NFS share fix : https://phabricator.kde.org/D21204
Comment 3 Méven Car 2019-12-19 07:22:14 UTC
The issue is that in the place view we currently display

/which/folder/is/mount on ipfrom

But the bug reporter would like either by default or with a setting to it as:

/mounted/on

This is perfectly doable, but I wonder about the opportunity.
An opinion Nate ?
Comment 4 Nate Graham 2019-12-19 15:05:02 UTC
I agree that the current display is much too long, and overwhelms the user with information. I think it should only display the local name, and all the additional information should appear only in the Properties dialog.
Comment 5 Méven Car 2019-12-20 07:13:09 UTC
KIO patch
https://phabricator.kde.org/D26113
Dolphin patch
https://phabricator.kde.org/D26114
Comment 6 Méven Car 2019-12-20 12:06:39 UTC
I just learned about a feature for your need.

You can add an option x-gvfs-name to specify the description for your drive in you fstab file.

solid, the lib responsible for mounted drives and such, follows the spec :
https://gitlab.gnome.org/GNOME/gvfs/blob/master/monitor/udisks2/what-is-shown.txt
Comment 7 Méven Car 2020-05-25 06:06:17 UTC
Git commit cdbfb3e799c72742163ecf6a6bdf073aeed874c3 by Méven Car.
Committed on 23/05/2020 at 11:12.
Pushed by meven into branch 'master'.

Add a QString Solid::Device::displayName, used in Fstab Device for network mounts

Summary:
This adds a label field, so that devices can provide a label and a more detailled description.
This label should be used as the device label and description used for subText or tooltips for instance.
The description is used as label by default.

For use in D26113 and D26114

Reviewers: #frameworks, bruns, sitter

Subscribers: ervin, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D28590

M  +20   -7    src/solid/devices/backends/fstab/fstabdevice.cpp
M  +3    -0    src/solid/devices/backends/fstab/fstabdevice.h
M  +5    -0    src/solid/devices/frontend/device.cpp
M  +9    -0    src/solid/devices/frontend/device.h
M  +5    -0    src/solid/devices/ifaces/device.cpp
M  +9    -0    src/solid/devices/ifaces/device.h

https://invent.kde.org/frameworks/solid/commit/cdbfb3e799c72742163ecf6a6bdf073aeed874c3
Comment 8 Méven Car 2020-05-30 10:15:42 UTC
Git commit 5f43507996e5287a136a34c625c7d83d6fe243d0 by Méven Car.
Committed on 30/05/2020 at 10:15.
Pushed by meven into branch 'master'.

Places: Use Solid::Device::DisplayName for DisplayRole

Summary:
KIO part of D26114
FIXED-IN: 5.71

Reviewers: #frameworks, ngraham, dfaure

Reviewed By: dfaure

Subscribers: dfaure, feverfew, bruns, broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26113

M  +1    -1    src/filewidgets/kfileplacesitem.cpp

https://invent.kde.org/frameworks/kio/commit/5f43507996e5287a136a34c625c7d83d6fe243d0
Comment 9 Méven Car 2020-06-16 17:37:23 UTC
Git commit c81927651a6f50af860b21d1be5c04bb4295b7cc by Méven Car.
Committed on 16/06/2020 at 17:37.
Pushed by meven into branch 'master'.

Places: Use Solid::Device::DisplayName for DisplayRole

Summary:
FIXED-IN: 20.08
Counter-part of D26113

Test Plan:
Before:
{F8215025}
After:
{F8215027}

Reviewers: ngraham, #dolphin

Reviewed By: ngraham, #dolphin

Subscribers: broulik, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D26114

M  +1    -1    CMakeLists.txt
M  +1    -1    src/panels/places/placesitem.cpp

https://invent.kde.org/system/dolphin/commit/c81927651a6f50af860b21d1be5c04bb4295b7cc