Places: Use Solid::Device::DisplayName for DisplayRole

Summary:
KIO part of D26114

BUG: 415281
FIXED-IN: 5.71

Reviewers: #frameworks, ngraham, dfaure

Reviewed By: dfaure

Subscribers: dfaure, feverfew, bruns, broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26113